{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "e98642c3-e492-4dc8-aadb-6d59461d6fa0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "95aebaa8-36e8-4711-a615-72f4b5c33780",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Left Analog Stick",
                    "id": "2d383199-351b-4c38-adfe-34be94d4175b",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2b58fdb4-fa49-4979-92e8-17697cabb9a4",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ee7d53ad-b4e6-4139-bd35-4b34fadc5a7c",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "55cb024d-36a1-49e0-b527-68a2c2cff3a4",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "837341ed-8e14-417c-b2ef-e69a96573dcf",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player Camera",
            "id": "d4909b31-f38c-4aee-b911-2fcec8669e63",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "518c7e3e-f854-466c-9437-10d8def54479",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "RightAnalogStick",
                    "id": "52317654-b950-4d3d-bef1-c12c8dc252cc",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "50797957-766d-49dd-ad10-b74bf8b5792d",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "26923e69-52d7-4e6f-bcbe-40f1e18a3ecf",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7f5203dc-1280-499a-9b8f-96bf93187c0c",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "044678d8-e934-4e84-9b5f-8401d60910c9",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "0bfdb8fc-992b-4538-846e-2f54c6003270",
            "actions": [
                {
                    "name": "QuickBoost",
                    "type": "Button",
                    "id": "b3518089-0edc-4b45-982e-9b3f80583ffa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "256be6ce-435c-438b-bd5e-960d3c56396c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Flight",
                    "type": "Button",
                    "id": "537d826b-20d3-4a9c-884d-ff23e0551e1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FlightPrimer",
                    "type": "Button",
                    "id": "f4b3bc44-d766-4730-8dc6-25220af7e43c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireRightWeapon",
                    "type": "Button",
                    "id": "34acc030-f4b9-4776-8372-ba021c3280d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireLeftWeapon",
                    "type": "Button",
                    "id": "55932d75-08c5-4a37-9c01-a3d5bf8d3a2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchLockOn",
                    "type": "Button",
                    "id": "abc30f95-7631-4777-9327-29532e0fe5f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "585b28bb-67a5-4e78-8dfa-d8bf885abf20",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickBoost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b62cbef1-988b-4a1c-bc09-997d0a82f9c8",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65682084-d29f-42d6-963d-ea69e73dbddf",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Hold(duration=0.21,pressPoint=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Flight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c68c9a22-7113-476c-a216-3d585db4b50a",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Tap(pressPoint=1)",
                    "processors": "",
                    "groups": "",
                    "action": "FlightPrimer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57f837e9-09e5-404c-a005-539d6e37b443",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireRightWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f507fc79-fd59-4c96-8b02-32fafd2a69f9",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireLeftWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd4f6914-4ebe-4509-ba95-968212695927",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchLockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}